--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,68 @@
 /* global styles  */
-
+*{
+    box-sizing: border-box;
+    /*border: 1px solid red;*/
+}
 /* element styles */
+body{
+    margin: 0;
+    min-height: 100vh;
+    background-color: #e6e6e6;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+h1{
+    font-size: 3.5rem;
+    /*margin: 0;*/
 
+}
 /* layout */
+.container{
+    /* border: 3px solid blue; */
+    width: 90vw;
+    margin: 0 auto;
+
+}
+
+.button-wrapper{
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+
+}
+
+.stats-wrapper{}
+
+.game-state-wrapper{
+    display: flex;
+    justify-content: space-around;
+}
 
 /* headings */
+.game-title{
+    text-align: center;
+}
 
 /* buttons */
-
+.button-wrapper button{
+    background-color: #0b99ff;
+    color: white;
+    padding: 1rem;
+    font-size: 1.8rem;
+    border: 2px solid #134a71;
+    border-radius: .25rem;
+}
+.button-wrapper button:active{
+    background-color: #0b99ff;
+    border: 2px solid #134a71;
+}
 /* images */
+.game-graphic{
+    max-height: 33vmin;
+}
+
+.game-graphic hover{
+    border: 10px hotpink;
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
